welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: too many arguments for constructor Array: (_length: Int)Array[T]
	var tab =new Array(1,2,3)
                 ^